Source/WebCore/html/HTMLInputElement.cpp
@@ -935,6 +935,11 @@ bool HTMLInputElement::sizeShouldIncludeDecoration(int& preferredSize) const
     return m_inputType->sizeShouldIncludeDecoration(defaultSize, preferredSize);
 }
 
+float HTMLInputElement::decorationWidth() const
+{
+    return m_inputType->decorationWidth();
+}
+
 void HTMLInputElement::copyNonAttributePropertiesFromElement(const Element& source)
 {
     const HTMLInputElement& sourceElement = static_cast<const HTMLInputElement&>(source);
