Source/WebCore/html/NumberInputType.cpp
@@ -202,6 +202,19 @@ bool NumberInputType::sizeShouldIncludeDecoration(int defaultSize, int& preferre
     return true;
 }
 
+float NumberInputType::decorationWidth() const
+{
+    float width = 0;
+    HTMLElement* spinButton = element()->innerSpinButtonElement();
+    if (RenderBox* spinRenderer = spinButton ? spinButton->renderBox() : 0) {
+        width += spinRenderer->borderAndPaddingLogicalWidth();
+        // Since the width of spinRenderer is not calculated yet, spinRenderer->logicalWidth() returns 0.
+        // So computedStyle()->logicalWidth() is used instead.
+        width += spinButton->computedStyle()->logicalWidth().value();
+    }
+    return width;
+}
+
 bool NumberInputType::isSteppable() const
 {
     return true;
